[package]
name = "alpacka"
version = "0.1.0"
edition = "2024"
description = "A engine agnostic asset packaging format"
license = "Unlicense"
license-file = "UNLICENSE"
authors = ["Luramoth"]
repository = "https://github.com/Luramoth/alpacka"

[dependencies]
deflate = "1.0.0"
lz4 = "1.28.1"
toml = "1.1.2"
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
