[package]
name = "alpacka"
version = "0.1.0"
edition = "2024"
description = "A engine agnostic asset packaging format"
license = "Unlicense"
authors = ["Luramoth"]
repository = "https://github.com/Luramoth/alpacka"

[dependencies]
deflate = "1.0.0"
lz4 = "1.28.1"
toml = "1.1.2"
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
wincode = { version = "0.5.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
pretty_assertions = "1.4.1"
