[package]
name = "alpacka"
version = "0.1.0"
edition = "2024"
description = "A engine agnostic asset packaging format"
license = "Unlicense"
authors = ["Luramoth"]
repository = "https://github.com/Luramoth/alpacka"

[dependencies]
lz4 = "1.28.1"
toml = "1.1.2"
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
wincode = { version = "0.5.5", features = ["derive"] }
flate2 = "1.1.9"
positioned-io = "0.3.5"
xxhash-rust = { version = "0.8.16", features = ["xxh3"] }
chacha20poly1305 = "0.11.0"
hkdf = "0.13.0"
sha2 = "0.11.0"
aead-stream = { version = "0.6.0", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.27.0"
pretty_assertions = "1.4.1"
lipsum = "0.9.1"
rand = "0.10.2"
